--- a/site-plan.css
+++ b/site-plan.css
@@ -5,9 +5,9 @@ Fonts are separated by a | */
 
 :root {
   /* change the values below to your colors from your palette */
-  --primary-color: #396E94   ;
-  --secondary-color: #E7C24F ;
-  --accent1-color: #A42212;
+  --primary-color: #046B9F   ;
+  --secondary-color: #FF9A6B ;
+  --accent1-color: #8ECAE6;
   --accent2-color: white;
 
   /* change the values below to your chosen font(s) */
