--- a/styles/pieces.css
+++ b/styles/pieces.css
@@ -8,7 +8,7 @@
     width: 100px;
     padding-top: 50px;
 }
-#gridelement {
+p.gridelement{
     border: 1px solid;
     padding: 3px;
     margin: 0;
