--- a/styles/sets.css
+++ b/styles/sets.css
@@ -5,12 +5,23 @@ nav {
     height: 50px;
     margin: 0 auto;
 }
-nav a, footer a{
+nav a{
     text-decoration: none;
     padding: 20px;
     margin-top: 20px;
     position: relative;
     top: 50%
+}
+footer{
+    text-decoration: none;
+    position: relative;
+    margin-top: 100px;
+}
+footer span a {
+    text-decoration: none;
+}
+footer span a:hover {
+    background-color: #f1bf98;
 }
 nav a:hover {
     background-color: #f1bf98;
@@ -40,7 +51,9 @@ p.gridelement{
     grid-template-rows: repeat(1fr,5);
     width: 600px;
     justify-items: center;
-    position: relative;
+    position: absolute;
+    left: 25%;
+    top: 30%;
     
 }
 #headimg {
@@ -52,4 +65,15 @@ p.gridelement{
 img.equipgridelement {
 max-width: 100px;
 max-height: 100px;
+}
+#instructions {
+    width: 400px;
+    position: absolute;
+    left: 60%;
+    top: 30%;
+    font-size: 30px;
+}
+.social a img{
+    padding-top: 15px;
+    height: 50px;
 }
